# i2cs-pico

./: .gitignore  CMakeLists.txt  README.md  als.c  als.h  bus.c  bus.h  check.c  check.h  main.c  meas.c  meas.h  prs.c  prs.h  rhs.c  rhs.h
